[gd_scene load_steps=18 format=2]

[ext_resource path="res://01_scenes/04_DemoScreen/demo.gd" type="Script" id=1]
[ext_resource path="res://00_assets/fonts/HelvetiPixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://00_assets/fonts/Arial.tres" type="DynamicFont" id=3]
[ext_resource path="res://02_prefabs/Volume/Volume.tscn" type="PackedScene" id=4]
[ext_resource path="res://00_assets/fonts/debug_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://00_assets/fonts/arialbd.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://00_assets/sprites/ui/become_a_patron_button3x_pressed.png" type="Texture" id=7]
[ext_resource path="res://00_assets/sfx/ui/ui_accept.ogg" type="AudioStream" id=8]
[ext_resource path="res://00_assets/sprites/ui/become_a_patron_button3x.png" type="Texture" id=9]
[ext_resource path="res://00_assets/sprites/ui/pfp_osky.png" type="Texture" id=10]
[ext_resource path="res://00_assets/sprites/ui/become_a_patron_button3x_hover.png" type="Texture" id=11]
[ext_resource path="res://00_assets/sprites/ui/pfp_kom.png" type="Texture" id=12]
[ext_resource path="res://00_assets/sfx/ui/ui_tick.ogg" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/arial.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="Demo_Thanks" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 340, 650 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 40
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 80.0
margin_top = 40.0
margin_right = 520.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thanks" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 5 )
text = "Thanks for playing!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_blacnk" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 440.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 440.0
margin_bottom = 117.0
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]
[b]This version of the game is only a demo.[/b] 
I hope you enjoyed!

If you'd like to play the later builds of this game. Please consider [b]supporting this project on [color=#ff8020]Patreon[/color]![/b]
[/center]"
text = "
This version of the game is only a demo. 
I hope you enjoyed!

If you'd like to play the later builds of this game. Please consider supporting this project on Patreon!
"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -699.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 250.0
margin_right = -100.0
margin_bottom = -549.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar3" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 570.0
margin_right = -100.0
margin_bottom = -229.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar4" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 681.0
margin_right = -100.0
margin_bottom = -118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caption2" type="Label" parent="."]
margin_left = 190.0
margin_top = 270.0
margin_right = 431.0
margin_bottom = 294.0
custom_fonts/font = ExtResource( 3 )
text = "BunFan Team"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kom" type="Sprite" parent="."]
position = Vector2( 200, 409.6 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="caption" type="Label" parent="kom"]
margin_left = -120.0
margin_top = 152.0
margin_right = 121.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 3 )
text = "KomDog
Lead Developer / Artist"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="osky" type="Sprite" parent="."]
position = Vector2( 400, 409.6 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="caption2" type="Label" parent="osky"]
margin_left = -120.857
margin_top = 152.0
margin_right = 120.143
margin_bottom = 203.0
custom_fonts/font = ExtResource( 3 )
text = "Oskenso
Quality Control Lead"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 6.0
bus = "SFX"

[node name="ui_accept" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Label" type="Label" parent="."]
margin_left = 180.0
margin_top = 727.0
margin_right = 420.0
margin_bottom = 755.0
custom_fonts/font = ExtResource( 5 )
text = "Press \"z\" to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Fade"]

[node name="continue" type="Timer" parent="."]
wait_time = 2.0

[node name="patreon_button" type="TextureButton" parent="."]
margin_left = 190.0
margin_top = 602.0
margin_right = 825.0
margin_bottom = 746.0
rect_scale = Vector2( 0.346303, 0.346303 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="patreon_button"]

[node name="Volume" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="timeout" from="continue" to="." method="continue_to_menu"]
[connection signal="button_up" from="patreon_button" to="." method="open_patreon"]
